crates/harness-tui/src/snapshots/harness_tui__live_shell_details_drawer_orchestration_minimum.snap
---
source: crates/harness-tui/src/lib.rs
expression: rendered
---
 run run_fixture · unknown/openai · gpt-5-codex                                 
  › user · req_001                                                              
    Explain the refactor               ○ Orchestration                          
  ●  done  assistant · openai/gpt-5-codagents 1 · queued 1 · running 1 · sta…   
    Working through the steps.         warn: stale for 3001 ms                  
                                        stale  scan · w1/deep · scan            
                                        running  dispatch · supervisor/n/a …    
                                        queued  tool:read · system/n/a · to…    
                                        completed  tool:done · w2/scout · t…    
                                                                                
                                       ● Details                                
                                       Activity metadata:                       
                                       Request ID: req_001                      
                                       Provider: openai                         
                                       Model: gpt-5-codex                       
                                       Status: done                             
                                       Sequences: 1-18                          
                                                                                
                                       Request metadata:                        
  Success   turn 1/1 · req_001 · openai/gpt-5-codex · ready for next turn       
 ┌Composer · 1 line · 0 chars─────────────────────────────────────────────────┐ 
 │Type a prompt for the next turn…                                            │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 Enter send  Shift+Enter nl  i close  2 events  3 diff  4 help  q quit
