crates/harness-tui/src/snapshots/harness_tui__live_shell_disconnected_stream.snap
---
source: crates/harness-tui/src/lib.rs
expression: "render_live_lines(app, width, height)"
---
Harness · unknown · default/default · -                                         
┌Conversation (following)──────────────────────────────────────────────────────┐
│ Waiting for first turn…                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Disconnected · live event stream unavailable · reopen TUI                       
┌Composer (disabled · Disconnected) (focused)──────────────────────────────────┐
│Composer disabled — reopen the TUI to reconnect the live stream.              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
i details   2 ev   3 diff   4 help   q quit
