crates/harness-tui/src/snapshots/harness_tui__live_shell_empty_startup.snap
---
source: crates/harness-tui/src/lib.rs
expression: "render_live_lines(app, width, height)"
---
Harness · unknown · default/default · -                                         
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                     Harness                                    
                                                                                
                          Start a conversation to begin                         
                                                                                
                      Ctrl+P commands   i details   ? help                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Ready · prompt ready                                                           
 ┌Composer (2 lines · 0 chars) (focused)──────────────────────────────────────┐ 
 │█                                                                           │ 
 │                                                                            │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
Enter send   ⇧↵ nl   i details   2 ev   3 diff   4 help   q quit
