crates/harness-tui/src/snapshots/harness_tui__live_shell_finished_state.snap
---
source: crates/harness-tui/src/lib_tests/transcript_flow.rs
expression: "render_live_lines(&app, 80, 24)"
---
                                                                                
   test-workspace /workspace/agent-harness                                     
                                                                                
     transcript remains visible                                                 
                                                                                
     Worked for 0.0s.                                                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ❯ Build anything                                                              
  Shift+Tab:mode  │  Ctrl+x:shortcuts
