crates/harness-tui/src/snapshots/harness_tui__live_shell_orchestration_status_strip_snapshot.snap
---
source: crates/harness-tui/src/lib.rs
expression: status_row
---
                      Ready   ready for first turn  ·  agents 2 · queued 1 · running 1 · stale 1
