crates/harness-tui/src/snapshots/harness_tui__live_shell_permission_preserves_draft.snap
---
source: crates/harness-tui/src/lib.rs
expression: "render_live_lines(app, width, height)"
---
Harness · run_fixture · default/default · -                                     
┌Conversation (following)──────────────────────────────────────────────────────┐
│ ◷ permission · requested                                                     │
│   Apply hashline edit to demo.txt                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│               ┌Permission Requested──────────────────────────┐               │
│               │        Apply hashline edit to demo.txt       │               │
│               │                                              │               │
│               │         [a]llow  [d]eny  [esc]dismiss        │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Ready · prompt ready                                                            
┌Composer (2 lines · 15 chars) (focused)───────────────────────────────────────┐
│keep this draft█                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Enter send   ⇧↵ nl   i details   2 ev   3 diff   4 help   q quit
