crates/harness-tui/src/snapshots/harness_tui__live_shell_prompt_echo.snap
---
source: crates/harness-tui/src/lib.rs
assertion_line: 8850
expression: "render_live_lines(&app, 80, 24)"
---
 run unknown · unknown/-                                                        
  ╭─ › user (pending turn)                                                      
  │  ship it                                                                    
  ╰─                                                                            
                                                                                
  ╭─ ◐ assistant (streaming… · current)                                         
  │  Waiting for response…                                                      
  ╰─                                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Sending   turn 1 · waiting for first tokens  ·  orch 0a 0q 0r 0s              
 ────────────────────────────────────────────────────────────────────────────── 
 ▎ Queue the next turn while this one finishes…                                 
 Enter send  Shift+Enter nl  Ctrl+p commands  q quit
