crates/harness-tui/src/snapshots/harness_tui__live_shell_shift_enter_multiline.snap
---
source: crates/harness-tui/src/lib.rs
expression: "render_live_lines(app, width, height)"
---
Harness · unknown · default/default · -                                         
┌Conversation (following)──────────────────────────────────────────────────────┐
│ Waiting for first turn…                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Ready · prompt ready                                                            
┌Composer (2 lines · 22 chars) (focused)───────────────────────────────────────┐
│first line                                                                    │
│second line█                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
Enter send   ⇧↵ nl   i details   2 ev   3 diff   4 help   q quit
