crates/harness-tui/src/snapshots/harness_tui__live_shell_snapshot_100x30.snap
---
source: crates/harness-tui/src/lib.rs
expression: "format!(\"{:#?}\", terminal.backend().buffer())"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 30 },
    content: [
        "Harness · run_fixture · default/default · gpt-5-codex                                               ",
        "┌Conversation (following)──────────────────────────────────────────────────────────────────────────┐",
        "│ › user · req_001                                                                                 │",
        "│   Explain the refactor                                                                           │",
        "│ ● assistant · done · openai/gpt-5-codex · current                                                │",
        "│   Working through the steps.                                                                     │",
        "│ ● tool fs.read · succeeded                                                                       │",
        "│   args {"path":"src/app.rs"}                                                                     │",
        "│   ↳ tool output                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
        "Ready · turn 1/1 · req_001 · openai/gpt-5-codex                                                     ",
        "┌Composer (2 lines · 0 chars) (focused)────────────────────────────────────────────────────────────┐",
        "│█                                                                                                 │",
        "│                                                                                                  │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
        "Enter send   ⇧↵ nl   i details   2 ev   3 diff   4 help   q quit                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(152, 164, 179), bg: Rgb(17, 22, 30), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(158, 183, 217), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 25, y: 1, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Rgb(88, 155, 249), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Rgb(88, 155, 249), bg: Rgb(13, 17, 23), underline: Reset, modifier: BOLD,
        x: 8, y: 2, fg: Rgb(160, 171, 184), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 2, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 3, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Rgb(59, 162, 85), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: Rgb(88, 155, 249), bg: Rgb(13, 17, 23), underline: Reset, modifier: BOLD,
        x: 13, y: 4, fg: Rgb(160, 171, 184), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 51, y: 4, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 4, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 5, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 5, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Rgb(59, 162, 85), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 4, y: 6, fg: Rgb(59, 162, 85), bg: Rgb(13, 17, 23), underline: Reset, modifier: BOLD,
        x: 16, y: 6, fg: Rgb(160, 171, 184), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 28, y: 6, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 6, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 6, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Rgb(160, 171, 184), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 30, y: 7, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 7, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 7, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Rgb(59, 162, 85), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 8, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 8, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 9, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 9, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 10, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 10, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 11, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 11, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 12, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 12, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 13, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 13, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 14, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 14, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 14, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 15, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 15, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 15, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 16, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 16, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 16, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 17, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 17, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 17, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 18, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 18, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 18, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 19, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 19, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 19, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 20, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 20, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 20, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 21, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 21, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 21, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 2, y: 22, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 98, y: 22, fg: Reset, bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 22, fg: Rgb(43, 53, 65), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 0, y: 24, fg: Rgb(59, 162, 85), bg: Rgb(17, 22, 30), underline: Reset, modifier: BOLD,
        x: 5, y: 24, fg: Rgb(126, 137, 153), bg: Rgb(17, 22, 30), underline: Reset, modifier: NONE,
        x: 0, y: 25, fg: Rgb(88, 155, 249), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Rgb(158, 183, 217), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 39, y: 25, fg: Rgb(88, 155, 249), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 26, fg: Rgb(88, 155, 249), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 1, y: 27, fg: Rgb(230, 233, 239), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 99, y: 27, fg: Rgb(88, 155, 249), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
        x: 0, y: 29, fg: Rgb(126, 137, 153), bg: Rgb(13, 17, 23), underline: Reset, modifier: NONE,
    ]
}
